[package]
name = "codelauf"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]

[dependencies]
rusqlite = "0.2.0"
schemamama = "0.0.8"
schemamama_rusqlite = "0.1.2"
clap = "1.4.0"
zookeeper = "0.1.3"
env_logger = "0.3.1"
log = "0.3.2"
uuid = "0.1"
toml = "0.1.22"
rs-es = "0.1.17"
time = "0.1.32"
sha1 = "0.1.1"
url = "0.2.37"
rustc-serialize = "0.3"

[dependencies.chrono]
version = "0.2"
features = ["rustc-serialize"]

[dependencies.git2]
git = "file:/Users/chris/Development/cmsd2/git2-rs"
rev = "tree_entry_to_owned"
#git = "https://github.com/cmsd2/git2-rs"
#rev = "tree_iter_lifetime"
#git = "https://github.com/alexcrichton/git2-rs"
#rev = "ed0573ae4472b3d965b53398e158160442e21013"

[features]
unstable = []

[[bin]]
doc = false
name = "codelauf"
path = "src/main.rs"
