[package]
name = "codelauf"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]

[dependencies]
rusqlite = "0.2.0"
schemamama = "0.0.8"
schemamama_rusqlite = "0.1.2"
clap = "1.4.0"
zookeeper = "0.1.3"
env_logger = "0.3.1"
log = "0.3.2"
uuid = "0.1"
toml = "0.1.22"
rs-es = "0.1.17"
time = "0.1.32"
sha1 = "0.1.1"
url = "0.2.37"
rustc-serialize = "0.3"
encoding = "0.2"

[dependencies.chrono]
version = "0.2"
features = ["rustc-serialize"]

[dependencies.git2]
git = "https://github.com/alexcrichton/git2-rs"
rev = "master"

[features]
unstable = []

[[bin]]
doc = false
name = "codelauf"
path = "src/main.rs"
